tests/integration/formats/gcc/check-color.txt
tests/integration/formats/sample.cs:1:1: error: class found
1 >| 馃煢public class 馃煣Foo
2  | 馃煢{
3  | 馃煢    public 馃煪int馃煢 馃煣Bar馃煢 { get; set; }
4  | 馃煢    public馃煪 void 馃煣Baz馃煪() { }
5 >| 馃煢}

tests/integration/formats/sample.cs:7:1: error: class found
7 | 馃煢public class 馃煣Qux馃煢 { }
    ^~~~~~~~~~~~~~~~~~~~

2 errors in 1 file
